styles: fixed z-index issue with svg line art

--- a/src/styles/components/Navigation.module.scss
+++ b/src/styles/components/Navigation.module.scss
@@ -5,6 +5,8 @@
   flex-direction: column;
   text-align: left;
   .nav-link {
+    position: relative;
+    z-index: 2;
     border-top: 1px solid #b2b0b0;
     text-transform: uppercase;
     font-weight: bold;
